# rust_nextstep

./: README.md
async-graphql/: Cargo.toml
async-graphql/src/: main.rs
btc_playground/: Cargo.toml
btc_playground/src/: main.rs  tobytes.rs
candletest/: Cargo.toml
candletest/src/: main.rs
delta_arrow/: .gitignore  Cargo.toml  df2delta.py
delta_arrow/data/: thegrid.parquet
delta_arrow/data/thegrid.delta/: 0-2df34050-7f4f-4194-aace-05069d96d19e-0.parquet
delta_arrow/src/: main.rs  trydelta.rs  trypolars.rs
deltalake_hello/: Cargo.toml
deltalake_hello/src/: main.rs
fpcomplete/: Cargo.toml
fpcomplete/src/: main.rs
helloworld-tonic/: Cargo.toml  README.md  build.rs
helloworld-tonic/src/: client.rs  server.rs
linked_list/: Cargo.toml  Docker_distroless  Dockerfile  Makefile  README.md
linked_list/src/: .lib.rs.swp  lib.rs
mongo_qs/: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  service.yaml  service2.yaml
mongo_qs/src/: main.rs
openai_test/: .gitignore  Cargo.toml
openai_test/src/: lib_openai.rs  main.rs
p2p-playground/: Cargo.toml
p2p-playground/src/: main.rs
polars_hello/: Cargo.toml  README.md
polars_hello/data_csv/: thegrid.csv
polars_hello/src/: main.rs
read_xml/: Cargo.toml  Makefile  file.xml
read_xml/src/: main.rs  state.rs
redb-try/: Cargo.toml
redb-try/src/: main.rs
rust4rustaceans/: Cargo.toml
rust4rustaceans/src/: ch_01.rs  main.rs
serde_test/: Cargo.toml  res.json
serde_test/src/: main.rs  schema.json
sha1_cracker/: Cargo.toml  README.md
sha1_cracker/src/: main.rs
sled-actors/: Cargo.toml
sled-actors/src/: actorsys.rs  commander.rs  eventbus.rs  eventer.rs  main.rs
sled-try/: Cargo.toml
sled-try/src/: main.rs
sqlx_try/: .env  Cargo.toml
sqlx_try/src/: main.rs
state_type/: Cargo.toml
state_type/src/: main.rs
tide_tracing/: Cargo.toml  README.md
tide_tracing/src/: main.rs
tonic_helloworld/proto/: helloworld.proto
tonic_routeguide/: Cargo.toml  Dockerfile  Makefile
