[package]
name = "async-graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "4.0"
# async-graphql-actix-web = "4.0" # If you need to integrate into actix-web
#async-graphql-warp = "4.0" # If you need to integrate into warp
#async-graphql-tide = "4.0" # If you need to integrate into tide