[package]
name = "delta_arrow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
datafusion-expr = "34.0.0"
deltalake = { version = "0.16.5", features = ["datafusion"] }
futures = "0.3.30"
polars = { version = "0.36.2", features = ["lazy", "csv", "parquet"] }
# polars-arrow = "0.36.2"
