[package]
name = "polars_hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.34.2", features = ["lazy", "temporal", "describe", "json", "parquet", "dtype-datetime", "serde"] }
serde = "1.0.195"
