[package]
name = "tide_tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
serde = { version = "1.0.197", features = ["derive"] }
tide = "0.16.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
